# chronfix

./: README.md  pyproject.toml
examples/: HYS14 — Correction Method.md
examples/HYS14/: README.md  delta_t_hourly.csv  delta_t_hourly_clean.npy  hour_times.npy  trigger_periods.csv
src/chronfix/: __init__.py  clock_model.py  correct.py
src/chronfix/scripts/: apply_correction.py
